--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -1,12 +1,11 @@
-
 <!DOCTYPE html>
 <html>
 
 <head>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
-    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"/>
+    <meta name="apple-mobile-web-app-capable" content="yes"/>
     <link rel="shortcut icon" href="resources/diamond-layout/images/favicon.ico" type="image/x-icon"></link>
     <link rel="icon" href="/resources/diamond-layout/images/favicon.ico" type="image/x-icon"></link>
     <title>Online events</title>
@@ -40,6 +39,9 @@
                     <a href="#features">MOGUĆNOSTI</a>
                 </li>
                 <li class="landing-menu-item">
+                    <a href="#calendar">KALENDAR</a>
+                </li>
+                <li class="landing-menu-item">
                     <a href="#pricing">KORISNICI</a>
                 </li>
                 <li class="contact landing-menu-item">
@@ -69,7 +71,7 @@
                 <img class="lazy"
                      src="resources/diamond/diamond-layout/images/placeholder-hero-image.jpg"
                      data-src="resources/images/home.png"
-                     data-srcset="resources/images/home.png" />
+                     data-srcset="resources/images/home.png"/>
             </div>
         </div>
     </div>
@@ -77,33 +79,33 @@
     <div id="meetDiamond" class="landing-meetdiamond">
         <div class="section-title">
             <h1>Kategorije događaja</h1>
-<!--            <span>Full Customizable Template</span>-->
+            <!--            <span>Full Customizable Template</span>-->
         </div>
         <div class="p-grid">
             <div class="p-col-12 p-md-6 p-lg-3">
                 <div class="card widget-feature-box">
-                    <img src="resources/diamond/diamond-layout/images/concert.jpg" />
+                    <img src="resources/diamond/diamond-layout/images/concert.jpg"/>
                     <h2>Glazbeni događaji</h2>
                     <span>Koncerti, Festivali, DJ Party, Plesnjak</span>
                 </div>
             </div>
             <div class="p-col-12 p-md-6 p-lg-3">
                 <div class="card widget-feature-box">
-                    <img src="resources/diamond/diamond-layout/images/theatre1.jpg" />
+                    <img src="resources/diamond/diamond-layout/images/theatre1.jpg"/>
                     <h2>Kulturni događaji</h2>
                     <span>Izložbe, Filmovi, Predstave, Stand-up komedije</span>
                 </div>
             </div>
             <div class="p-col-12 p-md-6 p-lg-3">
                 <div class="card widget-feature-box">
-                    <img src="resources/diamond/diamond-layout/images/sport1.jpg" />
+                    <img src="resources/diamond/diamond-layout/images/sport1.jpg"/>
                     <h2>Sportski događaji</h2>
                     <span>Turnir, Utakmice, Sportske edukacije</span>
                 </div>
             </div>
             <div class="p-col-12 p-md-6 p-lg-3">
                 <div class="card widget-feature-box">
-                    <img src="resources/diamond/diamond-layout/images/business1.jpg" />
+                    <img src="resources/diamond/diamond-layout/images/business1.jpg"/>
                     <h2>Poslovni događaji</h2>
                     <span>Seminari, Konferencije, Radionice</span>
                 </div>
@@ -124,7 +126,7 @@
                 <img class="lazy"
                      src="resources/diamond/diamond-layout/images/placeholder-hero-image.jpg"
                      data-src="resources/images/home.png"
-                     data-srcset="resources/diamond/diamond-layout/images/feature-image-1.png" />
+                     data-srcset="resources/diamond/diamond-layout/images/feature-image-1.png"/>
             </div>
         </div>
         <div class="feature-row row-reverse">
@@ -139,7 +141,7 @@
                 <img class="lazy"
                      src="resources/diamond/diamond-layout/images/placeholder-hero-image.jpg"
                      data-src="resources/diamond-layout/images/pages/landing/feature-image-2.png"
-                     data-srcset="resources/diamond-layout/images/pages/landing/feature-image-2.png" />
+                     data-srcset="resources/diamond-layout/images/pages/landing/feature-image-2.png"/>
             </div>
         </div>
         <div class="feature-row">
@@ -154,9 +156,17 @@
                 <img class="lazy"
                      src="resources/diamond/diamond-layout/images/placeholder-hero-image.jpg"
                      data-src="resources/diamond-layout/images/pages/landing/feature-image-3.png"
-                     data-srcset="resources/diamond-layout/images/pages/landing/feature-image-3.png" />
+                     data-srcset="resources/diamond-layout/images/pages/landing/feature-image-3.png"/>
             </div>
         </div>
+    </div>
+
+    <div id="calendar" class="landing-features">
+        <div class="section-title">
+            <h1>Kalendar događaja</h1>
+            <span>Pregled događaja u kalendaru</span>
+        </div>
+
     </div>
 
     <div id="pricing" class="landing-pricing">
@@ -167,7 +177,7 @@
         <div class="pricing-cards">
             <div class="widget-pricing-card">
                 <h2>GOST</h2>
-                <span>Pretraga događaja</span>
+                <span>Početna stranica</span>
                 <span>Pregled događaja u kalendaru</span>
                 <span>Nema registracije</span>
             </div>
@@ -199,26 +209,26 @@
         <div class="contact-wrapper">
             <div class="contact-left">
                 <div class="card-contact">
-                    <img src="resources/diamond/diamond-layout/images/contact.png" />
+                    <img src="resources/diamond/diamond-layout/images/contact.png"/>
                 </div>
             </div>
             <div class="contact-right">
                 <div class="contact-text">
-                    <h1>Osjećajte se slobodni kontaktirati nas <br />
-                        a mi ćemo Vam se javiti <br />
+                    <h1>Osjećajte se slobodni kontaktirati nas <br/>
+                        a mi ćemo Vam se javiti <br/>
                         najbrže što možemo.</h1>
                     <div class="contact-info">
                         <div class="info">
                             <h2>Mail</h2>
-                            <p>info@online-events.hr<br />
-                                24 sata/dan <br />
-                                365 dana/godišnje <br />
+                            <p>info@online-events.hr<br/>
+                                24 sata/dan <br/>
+                                365 dana/godišnje <br/>
                             </p>
                         </div>
                         <div class="info">
                             <h2>Telefon</h2>
-                            <p>098 000 XXX<br />
-                                099 000 XXX<br />
+                            <p>098 000 XXX<br/>
+                                099 000 XXX<br/>
                                 09 - 17 sati</p>
                         </div>
                     </div>
@@ -258,7 +268,7 @@
 
     for (var i = 0; i < menuitems.length; i++) {
         var menuitem = menuitems[i];
-        menuitem.addEventListener('click', function(e) {
+        menuitem.addEventListener('click', function (e) {
             closeMenu();
         });
     }
@@ -266,7 +276,7 @@
     var links = document.querySelectorAll('a[href^="#"]');
     for (var i = 0; i < links.length; i++) {
         var link = links[i];
-        link.addEventListener('click', function(e) {
+        link.addEventListener('click', function (e) {
             if (document.documentElement.scrollIntoView) {
                 e.preventDefault();
                 document.getElementById(event.currentTarget.getAttribute('href').substring(1)).scrollIntoView({
@@ -277,9 +287,9 @@
         });
     }
 
-    window.onload = function(){
-        document.onclick = function(e){
-            if (e.target.className !== 'pi pi-bars'){
+    window.onload = function () {
+        document.onclick = function (e) {
+            if (e.target.className !== 'pi pi-bars') {
                 closeMenu();
             }
         };
