welcome page completed

--- a/src/main/webapp/welcome.xhtml
+++ b/src/main/webapp/welcome.xhtml
@@ -158,9 +158,9 @@
                 <li class="landing-menu-item">
                     <a href="#kategorije">KATEGORIJE</a>
                 </li>
-                <li class="landing-menu-item">
-                    <a href="#mogucnosti">MOGUĆNOSTI</a>
-                </li>
+<!--                <li class="landing-menu-item">-->
+<!--                    <a href="#mogucnosti">MOGUĆNOSTI</a>-->
+<!--                </li>-->
                 <li class="landing-menu-item">
                     <a href="#kalendar">KALENDAR</a>
                 </li>
@@ -236,63 +236,64 @@
         </div>
     </div>
 
-    <div id="mogucnosti" class="landing-features">
-        <div class="feature-row">
-            <div class="feature-text">
-                <h2>Cras suscipit mauris nisl. Donec molestie maximus tellus</h2>
-                <span>Cras suscipit mauris nisl. Donec molestie maximus tellus, eu congue elit interdum vitae.
-                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                        Aenean finibus laoreet lorem, non pretium elit. Nunc vel commodo velit, eu venenatis
-                        dolor.</span>
-            </div>
-            <div class="feature-image">
-                <img class="lazy"
-                     src="resources/diamond/diamond-layout/images/placeholder-hero-image.jpg"
-                     data-src="resources/images/home.png"
-                     data-srcset="resources/diamond/diamond-layout/images/feature-image-1.png"/>
-            </div>
-        </div>
-        <div class="feature-row row-reverse">
-            <div class="feature-text">
-                <h2>Cras suscipit mauris nisl. Donec molestie maximus tellus</h2>
-                <span>Cras suscipit mauris nisl. Donec molestie maximus tellus, eu congue elit interdum vitae.
-                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                        Aenean finibus laoreet lorem, non pretium elit. Nunc vel commodo velit, eu venenatis
-                        dolor.</span>
-            </div>
-            <div class="feature-image">
-                <img class="lazy"
-                     src="resources/diamond/diamond-layout/images/placeholder-hero-image.jpg"
-                     data-src="resources/diamond-layout/images/pages/landing/feature-image-2.png"
-                     data-srcset="resources/diamond-layout/images/pages/landing/feature-image-2.png"/>
-            </div>
-        </div>
-        <div class="feature-row">
-            <div class="feature-text">
-                <h2>Cras suscipit mauris nisl. Donec molestie maximus tellus</h2>
-                <span>Cras suscipit mauris nisl. Donec molestie maximus tellus, eu congue elit interdum vitae.
-                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
-                        Aenean finibus laoreet lorem, non pretium elit. Nunc vel commodo velit, eu venenatis
-                        dolor.</span>
-            </div>
-            <div class="feature-image">
-                <img class="lazy"
-                     src="resources/diamond/diamond-layout/images/placeholder-hero-image.jpg"
-                     data-src="resources/diamond-layout/images/pages/landing/feature-image-3.png"
-                     data-srcset="resources/diamond-layout/images/pages/landing/feature-image-3.png"/>
-            </div>
-        </div>
-    </div>
+<!--    <div id="mogucnosti" class="landing-features">-->
+<!--        <div class="feature-row">-->
+<!--            <div class="feature-text">-->
+<!--                <h2>Cras suscipit mauris nisl. Donec molestie maximus tellus</h2>-->
+<!--                <span>Cras suscipit mauris nisl. Donec molestie maximus tellus, eu congue elit interdum vitae.-->
+<!--                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.-->
+<!--                        Aenean finibus laoreet lorem, non pretium elit. Nunc vel commodo velit, eu venenatis-->
+<!--                        dolor.</span>-->
+<!--            </div>-->
+<!--            <div class="feature-image">-->
+<!--                <img class="lazy"-->
+<!--                     src="resources/diamond/diamond-layout/images/placeholder-hero-image.jpg"-->
+<!--                     data-src="resources/images/home.png"-->
+<!--                     data-srcset="resources/diamond/diamond-layout/images/feature-image-1.png"/>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="feature-row row-reverse">-->
+<!--            <div class="feature-text">-->
+<!--                <h2>Cras suscipit mauris nisl. Donec molestie maximus tellus</h2>-->
+<!--                <span>Cras suscipit mauris nisl. Donec molestie maximus tellus, eu congue elit interdum vitae.-->
+<!--                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.-->
+<!--                        Aenean finibus laoreet lorem, non pretium elit. Nunc vel commodo velit, eu venenatis-->
+<!--                        dolor.</span>-->
+<!--            </div>-->
+<!--            <div class="feature-image">-->
+<!--                <img class="lazy"-->
+<!--                     src="resources/diamond/diamond-layout/images/placeholder-hero-image.jpg"-->
+<!--                     data-src="resources/diamond-layout/images/pages/landing/feature-image-2.png"-->
+<!--                     data-srcset="resources/diamond-layout/images/pages/landing/feature-image-2.png"/>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--        <div class="feature-row">-->
+<!--            <div class="feature-text">-->
+<!--                <h2>Cras suscipit mauris nisl. Donec molestie maximus tellus</h2>-->
+<!--                <span>Cras suscipit mauris nisl. Donec molestie maximus tellus, eu congue elit interdum vitae.-->
+<!--                        Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.-->
+<!--                        Aenean finibus laoreet lorem, non pretium elit. Nunc vel commodo velit, eu venenatis-->
+<!--                        dolor.</span>-->
+<!--            </div>-->
+<!--            <div class="feature-image">-->
+<!--                <img class="lazy"-->
+<!--                     src="resources/diamond/diamond-layout/images/placeholder-hero-image.jpg"-->
+<!--                     data-src="resources/diamond-layout/images/pages/landing/feature-image-3.png"-->
+<!--                     data-srcset="resources/diamond-layout/images/pages/landing/feature-image-3.png"/>-->
+<!--            </div>-->
+<!--        </div>-->
+<!--    </div>-->
 
     <div id="kalendar" class="landing-features">
         <div class="section-title">
             <h1>Kalendar događaja</h1>
+            <span>Pregled događaja u kalendaru</span>
         </div>
-        <div>
+        <div class="landing-features">
             <h:body>
                 <h:form>
-                    <p:panel id="panel_unos" header="Pregled događaja u kalendaru" style="margin-bottom:5px" toggleable="false"
-                             toggleSpeed="500" toggleableHeader="true" widgetVar="widgetInput">
+<!--                    <p:panel id="panel_unos" header="Pregled događaja u kalendaru" style="margin-bottom:5px" toggleable="false"-->
+<!--                             toggleSpeed="500" toggleableHeader="true" widgetVar="widgetInput">-->
                         <p:growl id="messages" showDetail="true"/>
 
                         <p:schedule id="schedule" value="#{pregledDogadajaController.eventModel}" widgetVar="myschedule"
@@ -341,7 +342,7 @@
                             <!--                    </div>-->
                         </p:dialog>
 
-                    </p:panel>
+<!--                    </p:panel>-->
                 </h:form>
             </h:body>
         </div>
